--- a/IliasRevitPluginTest_01/UI/WPFtest01.xaml
+++ b/IliasRevitPluginTest_01/UI/WPFtest01.xaml
@@ -1,12 +1,25 @@
-﻿<UserControl x:Class="IliasRevitPluginTest_01.UI.UserControl1"
+﻿<UserControl x:Class="IliasRevitPluginTest_01.UI.WPFtest02"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:IliasRevitPluginTest_01.UI"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
-    <Grid Background="White">
-            
+             d:DesignHeight="800" d:DesignWidth="800">
+    <Grid Background="#FFE6E06F">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="50*"/>
+            <RowDefinition Height="50*"/>
+            <RowDefinition Height="500"/>
+            <RowDefinition Height="50*"/>
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="50*"/>
+            <ColumnDefinition Width="377*"/>
+            <ColumnDefinition Width="50*"/>
+        </Grid.ColumnDefinitions>
+        
+        <Button Name="TestButton01" Margin="0,0,0,0" Grid.Column="1" Grid.RowSpan="1" Grid.Row="1" Background="#FFFF6464" Content="IliasTestButton01&#xD;&#xA;" FontSize="48" FontWeight="Bold" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Width="630" RenderTransformOrigin="0.5,0.5"></Button>
+
     </Grid>
 </UserControl>
