--- a/IliasRevitPluginTest_01/UI/WPFtest01.xaml
+++ b/IliasRevitPluginTest_01/UI/WPFtest01.xaml
@@ -19,7 +19,7 @@
             <ColumnDefinition Width="50*"/>
         </Grid.ColumnDefinitions>
         
-        <Button Name="TestButton01" Margin="0,0,0,0" Grid.Column="1" Grid.RowSpan="1" Grid.Row="1" Background="#FFFF6464" Content="IliasTestButton01&#xD;&#xA;" FontSize="48" FontWeight="Bold" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Width="630" RenderTransformOrigin="0.5,0.5"></Button>
+        <Button Name="TestButton01" Margin="0,0,0,0" Grid.Column="1" Grid.RowSpan="1" Grid.Row="1" Background="#FFFF6464" Content="MyTestButton01" FontSize="48" FontWeight="Bold" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Width="630" RenderTransformOrigin="0.5,0.5" Click="TestButton01_Click"></Button>
 
     </Grid>
 </UserControl>
